<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/matchesRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/matchesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/matchesTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/matchesInnerPane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/finishTournamentButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/matchesTitle"
        android:scrollbars="vertical"
        android:layout_marginTop="21dp" >
    </ScrollView>

    <Button
        android:id="@+id/finishTournamentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="finishTournamentButton"
        android:text="@string/finishTournamentButton" />

    <Button
        android:id="@+id/cancelTournamentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="cancelTournamentButton"
        android:text="@string/cancelTournamentButton" />

</RelativeLayout>