<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/playershello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/playershello" />
    
    <ListView
        android:id="@android:id/list"
        android:choiceMode="multipleChoice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playershello"
        android:layout_above="@+id/newplayerbutton" />
    
    <Button
        android:id="@+id/homebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="homeButton"
        android:text="@string/homebutton" />

    <Button
        android:id="@+id/newplayerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="newPlayerButton"
        android:text="@string/newplayerbutton" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBarPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="59dp"
        android:layout_toRightOf="@+id/newplayerbutton" />
     
</RelativeLayout>